haxe-plugin/src/test/resources/testData/annotation.semantic/InitMagicMethodShouldBeStatic.hx
class Test {
  public function <error descr="__init__ must be static">__init__</error>() {}
}